# ADAD

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  ChatGPT_answer.md  LICENSE  README.md  adad_state_machine.md  adad_state_machine.mermaid  adad_workflow_flowchart.md  adad_workflow_flowchart.mermaid  install.py  pyproject.toml  streamlit-to-react-ready.skill  system_map.md  system_map.schema.json  system_map.yaml  程式開發規範.md  規格總覽.md
.agents/: .adad-agents.json  AGENTS.md
.obsidian/: workspace.json
adad_cli/: __init__.py  build_hooks.py  cli.py  core.py  platform_io.py  sync_assets.py  task_complexity.py
checkpoints/: CP-2-20260712T023824948346Z-sync_adad_assets-rejected.yaml  CP-2-20260712T024246643172Z-sync_adad_assets-approved.yaml  CP-2-20260712T065056509914Z-task_complexity_policy-approved.yaml  CP-2-20260712T070943475587Z-task_complexity_policy-approved.yaml  CP-2-20260712T124350787184Z-project_venv_python-approved.yaml  CP-2-20260712T125136675146Z-write_project_pre_commit_hook-approved.yaml  CP-2-20260712T125719834606Z-upgrade_project_virtual_environment-approved.yaml  CP-2-20260712T130249171672Z-remove_project_virtual_environment-approved.yaml  CP-2-20260712T130807363449Z-clean_project_virtual_environment-approved.yaml  CP-2-20260712T131228732129Z-ensure_project_virtual_environment-approved.yaml  CP-2-20260712T131639654538Z-init_project_virtual_environment-approved.yaml  CP-2-20260712T133559619394Z-task_semantic_contract-approved.yaml  CP-2-20260712T133732256696Z-task_non_goals_contract-approved.yaml  CP-2-20260712T133912271540Z-task_verification_conditions-approved.yaml  CP-2-20260712T134114449853Z-task_assumptions_contract-approved.yaml  CP-2-20260712T134301520909Z-task_input_json_schema-approved.yaml  CP-2-20260712T135603177568Z-task_output_json_schema-approved.yaml  CP-2-20260712T140741994170Z-release_changelog-approved.yaml  CP-2-20260712T140750544359Z-documentation_alignment-approved.yaml  CP-2-20260713T072936736438Z-run_utf8_subprocess-approved.yaml  CP-2-20260713T081639618116Z-read_utf8_text_strict-approved.yaml  CP-2-20260713T083025086809Z-check_normalization-approved.yaml  CP-2-20260713T083710845269Z-write_utf8_text_atomic-approved.yaml  CP-2-20260713T085209113999Z-repository_line_ending_policy-approved.yaml  CP-2-20260713T103248765199Z-render_portable_python_hook_command-approved.yaml  CP-2-20260713T103843139160Z-render_portable_python_hook_command-rejected.yaml  CP-2-20260713T105049163202Z-render_portable_python_hook_command-approved.yaml  CP-2-20260713T110750250818Z-render_portable_python_hook_command-approved.yaml  (+86 more)
docs/: .gitignore  FIXES.md  MAIN_BRANCH_ARCHITECTURE.md  RELEASE_SOP.md  SPEC_INDEX.md  install.py  pyproject.toml  system_map.yaml
docs/adad_cli/: resources.py
docs/adad_cli/resources/agents/skills/adad-workflow/: SKILL.md
docs/adad_cli/resources/agents/skills/adad-workflow/scripts/: adad_core.py
docs/domains/: adad_roadmap.md
docs/specifications/: 01_kernel_interface.md  02_platform_instructions.md  03_toolkit_manifest.md  04_compatibility_checklist.md  05_task_backlog.md  06_multi_module_collaboration.md  07_checkpoint_payload_format.md
tests/: README.md  conftest.py  test_sub_maps.py  (+37 more)
(+58 files in other folders)
